tests/ui/g-route-policy-not-head.stderr
error[E0080]: evaluation panicked: Program::policy must annotate the controller self-send that opens each route/loop arm
 --> src/global/program/source.rs
  |
  | /         left.route_with_controller(
  | |             right,
  | |             left_head.controller,
  | |             is_binary_loop_route(
... |
  | |             ),
  | |         )
  | |_________^ evaluation of `hibana::global::program::source::<impl hibana::g::ChoreographyTerm for hibana::g::Route<hibana::g::Seq<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<92, (), hibana::integration::cap::control::RouteDecisionKind>>, hibana::g::Policy<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<93, (), hibana::integration::cap::control::RouteDecisionKind>>, 7>>, hibana::g::Seq<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<94, (), hibana::integration::cap::control::RouteDecisionKind>>, hibana::g::Policy<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<95, (), hibana::integration::cap::control::RouteDecisionKind>>, 7>>>>::SOURCE` failed inside this call
  |
note: inside `hibana::global::program::source::ProgramSourceData::route_with_controller`
 --> src/global/program/source.rs
  |
  |         self.eff.assert_route_arm_dynamic_policy_head();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::const_dsl::eff_list::<impl hibana::global::const_dsl::EffList>::assert_route_arm_dynamic_policy_head`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global/const_dsl/eff_list.rs
  |
  | /                     panic!(
  | |                         "Program::policy must annotate the controller self-send that opens each route/loop arm"
  | |                     );
  | |_____________________- in this macro invocation

note: erroneous constant encountered
 --> src/global/program/source.rs
  |
  |         let source = <Steps as crate::g::ChoreographyTerm>::SOURCE.eff_list();
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/program/source.rs
  |
  |     &ValidatedProgram::<Steps>::PROGRAM_IMAGE
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |                 Self::STAMP,
  |                 ^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn hibana::global::role_program::program::project_typed_program::<0, hibana::g::Route<Seq<hibana::g::Send<Role<0>, Role<0>, Msg<92, (), RouteDecisionKind>>, hibana::g::Policy<hibana::g::Send<Role<0>, Role<0>, Msg<93, (), RouteDecisionKind>>, 7>>, Seq<hibana::g::Send<Role<0>, Role<0>, Msg<94, (), RouteDecisionKind>>, hibana::g::Policy<hibana::g::Send<Role<0>, Role<0>, Msg<95, (), RouteDecisionKind>>, 7>>>>`
 --> src/global/role_program/program.rs
  |
  |         project_typed_program(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
